Separated out full build (`gradle clean build`) and full assemble (`gradle clean assemble`) performance test cases.